# sjmb-slack

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs  install.sh
config/: sjmb_slack.json  sjmb_slack.manifest.yaml
src/: config.rs  db_util.rs  lib.rs  slackbot.rs  str_util.rs
