[package]
name = "sjmb_slack"
version = "1.1.0"
edition = "2021"
resolver = "2"
authors = ["Sami J. Mäkinen <sjm@iki.fi>"]
description = "My Slack bot"
repository = "https://github.com/sjm42/sjmb-slack"
readme = "README.md"
keywords = ["slack", "bot"]
license = "MIT OR Apache-2.0"


[dependencies]
anyhow = "1"
chrono = "0"
chrono-tz = "0"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0"
futures = "0"
http = "0.2"
log = "0"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = { version = "3", features = ["full"] }
slack-morphism = { version = "1.15", features = ["hyper", "axum"] }
sqlx = { version = "0.7", features = [
    "macros",
    "migrate",
    "runtime-tokio-rustls",
    "sqlite",
] }
tokio = { version = "1", features = ["full"] }


[build-dependencies]
build-data = "0.1"


[profile.release]
lto = true
opt-level = 3

# EOF
