[package]
name = "sjmb_slack"
version = "1.3.1"
edition = "2021"
resolver = "2"
authors = ["Sami J. Mäkinen <sjm@iki.fi>"]
description = "My Slack bot"
repository = "https://github.com/sjm42/sjmb-slack"
readme = "README.md"
keywords = ["slack", "bot"]
license = "MIT OR Apache-2.0"


[dependencies]
anyhow = "1"
chrono = "0"
chrono-tz = "0"
clap = { version = "4", features = ["derive"] }
futures = "0"
http = "1"
regex = "1"
rustls = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = { version = "3", features = ["full"] }
slack-morphism = { version = "2", features = ["hyper", "axum"] }
sqlx = { version = "0", features = [
    "macros",
    "migrate",
    "runtime-tokio-rustls",
    "postgres",
] }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0", features = ["log"] }
tracing-subscriber = "0"



[build-dependencies]
build-data = "0"


[profile.release]
lto = "fat"
opt-level = 3

# EOF
