[package]
name = "sjmb_slack"
version = "1.5.0"
edition = "2024"
resolver = "2"
authors = ["Sami J. Mäkinen <sjm@iki.fi>"]
description = "My Slack bot"
repository = "https://github.com/sjm42/sjmb-slack"
readme = "README.md"
keywords = ["slack", "bot"]
license = "MIT OR Apache-2.0"


[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.6", features = ["derive"] }
futures = "0.3"
http = "1.4"
regex = "1.12"
rustls = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = { version = "3.1", features = ["full"] }
slack-morphism = { version = "2.19", features = ["hyper", "axum"] }
sqlx = { version = "0.8", features = [
    "macros",
    "migrate",
    "runtime-tokio-rustls",
    "postgres",
] }
tokio = { version = "1.50", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3"
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect", "handshake", "rustls-tls-native-roots"] }


[build-dependencies]
anyhow = "1.0"
build-data = "0.3"


[profile.release]
lto = "fat"
opt-level = 3

# EOF
